--- a/profile.html
+++ b/profile.html
@@ -106,7 +106,7 @@
             type="phone"
             class="form-custom"
             id="phone"
-            value="(+62)813456782"
+            value="(+62) 813456782"
           />
         </div>
       </section>
@@ -123,8 +123,8 @@
             />
           </div>
           <div class="col">
-            <label for="phone">DD/MM/YY:</label>
-            <input type="date" class="form-custom" value="2003-09-03" />
+            <label for="date">DD/MM/YY:</label>
+            <input type="date" class="form-custom" id="date" value="2003-09-03" />
           </div>
         </div>
       </section>
