--- a/detail.html
+++ b/detail.html
@@ -30,7 +30,7 @@
     <title>Fixie - Gray Only | Vehicle Rental</title>
   </head>
   <body>
-    <header style="position: -webkit-sticky; position: sticky; top: 0px">
+    <header>
       <nav>
         <a class="icon-home" href="home.html"
           ><i class="logo" alt="logo"></i>Home</a
@@ -54,7 +54,7 @@
     </header>
     <section class="content">
       <p class="page">
-        <img src="./assets/back.png" style="width: 40px" alt="" /><span
+        <img src="./assets/back.png" style="width: 2rem" alt="" /><span
           class="ms-5"
           >Detail</span
         >
