--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
     <title>Samantha Doe | Vehicle Rental</title>
   </head>
   <body>
-    <header style="position: -webkit-sticky; position: sticky; top: 0px">
+    <header>
       <nav>
         <a class="icon-home" href="home.html"
           ><i class="logo" alt="logo"></i>Home</a
