--- a/detail.html
+++ b/detail.html
@@ -54,7 +54,7 @@
     </header>
     <section class="content">
       <p class="page">
-        <img src="./assets/back.png" style="width: 2rem" alt="" /><span
+        <img src="./assets/back.png" style="height: 2rem" alt="" /><span
           class="ms-5"
           >Detail</span
         >
