--- a/home.html
+++ b/home.html
@@ -40,9 +40,13 @@
           <li><a class="nav-item" href="#news">Vehicle Type</a></li>
           <li><a class="nav-item" href="#contact">History</a></li>
           <li><a class="nav-item" href="#about">About</a></li>
-          <li><a class="hamburger" href="#">Hamburger</a></li>
           <li>
-            <a href="/login.html"
+            <a class="hamburger" href="#"
+              ><button class="btn btn-outline-light button-logreg">☰</button></a
+            >
+          </li>
+          <li>
+            <a style="padding: 0 1rem" href="/login.html"
               ><button class="btn btn-outline-warning button-logreg">
                 Login
               </button></a
@@ -59,34 +63,36 @@
       </nav>
     </header>
     <section class="finder-container">
-      <h1>
-        <p style="margin: 0">Explore and</p>
-        <p style="margin: 0">Travel</p>
-      </h1>
-      <p>Vehicle Finder</p>
-      <hr class="finder-line" />
-      <section class="form">
-        <select class="input-form" name="location" id="location">
-          <option value="volvo">Location</option>
-          <option value="jakarta">Jakarta</option>
-          <option value="bandung">Bandung</option>
-          <option value="yogyakarta">Yogyakarta</option>
-          <option value="malang">Malang</option>
-          <option value="surabaya">Surabaya</option>
-        </select>
-        <select class="input-form" name="type" id="type">
-          <option value="type">Type</option>
-          <option value="cars">Cars</option>
-          <option value="motorbike">Motorbike</option>
-          <option value="bike">Bike</option>
-        </select>
-        <select class="input-form" name="payment" id="payment">
-          <option value="payment">Payment</option>
-          <option value="transfer">Transfer</option>
-          <option value="cash">Cash</option>
-        </select>
-        <input class="input-form" type="date" id="birthday" name="birthday" />
-        <button class="btn btn-warning">Explore</button>
+      <section class="finder-content">
+        <h1>
+          <p style="margin: 0">Explore and</p>
+          <p style="margin: 0">Travel</p>
+        </h1>
+        <p>Vehicle Finder</p>
+        <hr class="finder-line" />
+        <section class="form">
+          <select class="input-form" name="location" id="location">
+            <option value="0">Location</option>
+            <option value="1">Jakarta</option>
+            <option value="2">Bandung</option>
+            <option value="3">Yogyakarta</option>
+            <option value="4">Malang</option>
+            <option value="5">Surabaya</option>
+          </select>
+          <select class="input-form" name="type" id="type">
+            <option value="type">Type</option>
+            <option value="cars">Cars</option>
+            <option value="motorbike">Motorbike</option>
+            <option value="bike">Bike</option>
+          </select>
+          <select class="input-form" name="payment" id="payment">
+            <option value="payment">Payment</option>
+            <option value="transfer">Transfer</option>
+            <option value="cash">Cash</option>
+          </select>
+          <input class="input-form" type="date" id="date" name="date" />
+          <button class="btn btn-warning">Explore</button>
+        </section>
       </section>
     </section>
     <section class="content">
