--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
             <option value="cash">Cash</option>
           </select>
           <input class="input-form" type="date" id="date" name="date" />
-          <button class="btn btn-warning">Explore</button>
+          <button class="btn btn-warning explore">Explore</button>
         </section>
       </section>
     </section>
