--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
         <a href="/home.html"
           ><button class="btn btn-warning mt-4 mb-3 width450">Login</button></a
         ><br />
-        <button class="btn bg-light width450">
+        <button class="btn bg-light width450 icon-button">
           <i class="icon-google"></i>Login with Google
         </button>
       </section>
