--- a/detail.html
+++ b/detail.html
@@ -31,56 +31,155 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="icon-home" href="home.html"
-          ><i class="logo" alt="logo"></i>Home</a
-        >
-        <ul>
-          <li>
-            <a href="profile.html"
-              ><img
-                src="./assets/samantha.jpg"
-                class="icon-profile prof"
-                alt=""
-            /></a>
-          </li>
-          <li><i class="icon-email email"></i></li>
-          <li class="optional"><a href="#about">About</a></li>
-          <li class="optional"><a href="#contact">History</a></li>
-          <li class="optional"><a href="#news">Vehicle Type</a></li>
-          <li><a class="" href="home.html">Home</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-sm navbar-light p-0">
+        <div class="container-fluid p-0 expanded">
+          <a class="icon-home hide-text" href="home.html"
+            ><i class="logo" alt="logo"></i
+          ></a>
+          <div class="expanded-right">
+            <div class="right">
+              <div class="button-email-profile">
+                <a class="hide-text" href="#"
+                  ><i class="icon-email email"></i>Email</a
+                >
+                <a href="profile.html"
+                  ><img
+                    src="./assets/samantha.jpg"
+                    class="icon-profile prof"
+                    alt=""
+                /></a>
+              </div>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <span class="nav-menu p-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Vehicle Type</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">History</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                </span>
+              </ul>
+            </div>
+          </div>
+        </div>
       </nav>
     </header>
     <section class="content">
-      <p class="page">
-        <img src="./assets/back.png" style="height: 2rem" alt="" /><span
-          class="ms-5"
-          >Detail</span
-        >
-      </p>
-      <section class="vehicle mt-4">
+      <h2>Detail</h2>
+      <section class="vehicle">
         <section class="photo">
-          <div class="main-photo">
-            <img src="./assets/fixie.jpg" style="width: 100%" alt="" />
-            <div class="small-photo mt-4">
-              <img src="./assets/prev.png" style="height: 20px" alt="" />
-              <img src="./assets/fixie.jpg" style="width: 40%" alt="" />
-              <img src="./assets/fixie.jpg" style="width: 40%" alt="" />
-              <img src="./assets/nxt.png" style="height: 20px" alt="" />
+          <div
+            id="carousel-thumb"
+            class="carousel slide carousel-fade carousel-thumbnails"
+            data-ride="carousel"
+          >
+            <!--Slides-->
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img
+                  class="d-block w-100"
+                  src="./assets/fixie.jpg"
+                  alt="First slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="./assets/fixie.jpg"
+                  alt="Second slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="./assets/fixie.jpg"
+                  alt="Third slide"
+                />
+              </div>
             </div>
+            <!--/.Slides-->
+            <!--Controls-->
+            <a
+              class="carousel-control-prev"
+              href="#carousel-thumb"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carousel-thumb"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+            <!--/.Controls-->
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carousel-thumb"
+                data-slide-to="0"
+                class="active"
+              >
+                <img
+                  class="d-block w-100"
+                  src="./assets/fixie.jpg"
+                  class="img-fluid"
+                />
+              </li>
+              <li data-target="#carousel-thumb" data-slide-to="1">
+                <img
+                  class="d-block w-100"
+                  src="./assets/fixie.jpg"
+                  class="img-fluid"
+                />
+              </li>
+              <li data-target="#carousel-thumb" data-slide-to="2">
+                <img
+                  class="d-block w-100"
+                  src="./assets/fixie.jpg"
+                  class="img-fluid"
+                />
+              </li>
+            </ol>
           </div>
         </section>
         <section class="detail">
           <h1>Fixie - Gray Only</h1>
-          <h2>Yogyakarta</h2>
-          <p class="availability mt-4">Available</p>
+          <h2 class="location">Yogyakarta</h2>
+          <p class="availability">Available</p>
           <p class="payment">No Prepayment</p>
-          <p>
-            Capacity : 1 person<br />
-            Type : Bike<br />
-            Reservation before 2 PM
-          </p>
+          <p class="info">Capacity: 1 person</p>
+          <p class="info">Type: Bike</p>
+          <p class="info">Reservation before 2 PM</p>
           <p class="price">Rp.78.000/day</p>
           <div class="count">
             <button class="btn btn-light count-button">-</button>
@@ -89,12 +188,16 @@
           </div>
         </section>
       </section>
-      <section class="action mt-4">
-        <button class="btn btn-dark text-warning button button2">
+      <section class="action">
+        <button class="btn btn-dark text-warning button action-button">
           Chat Admin
         </button>
-        <button class="btn btn-warning button button2">Reservation</button>
-        <button class="btn btn-dark text-warning button button1">
+        <button class="btn btn-warning button action-button">
+          Reservation
+        </button>
+        <button
+          class="btn btn-dark text-warning button action-button icon-button"
+        >
           <i class="icon-like"></i> Like
         </button>
       </section>
@@ -110,7 +213,7 @@
           </p>
           <p class="mt-5">©2020 Vehicle Rental Center. All rights reserved</p>
         </div>
-        <div class="destinations mb-5">
+        <div class="destinations">
           <p class="footer-title">Destinations</p>
           <p><a href="#">Bali</a></p>
           <p><a href="#">Yogyakarta</a></p>
@@ -118,7 +221,7 @@
           <p><a href="#">Kalimantan</a></p>
           <p><a href="#">Malang</a></p>
         </div>
-        <div class="vehicles mb-5">
+        <div class="vehicles">
           <p class="footer-title">Vehicle</p>
           <p><a href="#">Bike</a></p>
           <p><a href="#">Cars</a></p>
@@ -126,7 +229,7 @@
           <p><a href="#">Return Times</a></p>
           <p><a href="#">FAQs</a></p>
         </div>
-        <div class="interests mb-5">
+        <div class="interests">
           <p class="footer-title">Interests</p>
           <p><a href="#">Adventure Travel</a></p>
           <p><a href="#">Art And Culture</a></p>
@@ -135,7 +238,7 @@
           <p><a href="#">Culinary Trip</a></p>
         </div>
       </section>
-      <span><hr class="line" /></span>
+      <hr class="line" />
       <section class="social">
         <a href="#twitter.com/"
           ><i class="icon icon-twitter" alt="twitter"></i>twitter</a
@@ -154,5 +257,11 @@
         >
       </section>
     </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
