--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-light p-0">
+      <!-- <nav class="navbar navbar-expand-sm navbar-light p-0">
         <div class="container-fluid p-0">
           <a class="icon-home" href="home.html"
             ><i class="logo" alt="logo"></i
@@ -50,14 +50,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <ul class="button-login-register">
-                <!-- <li class="nav-item nav-link"> -->
                 <a href="/login.html"
                   ><button class="btn btn-outline-warning">Login</button></a
                 >
                 <a href="/register.html"
                   ><button class="btn btn-warning">Register</button></a
                 >
-                <!-- </li> -->
               </ul>
               <span class="nav-menu p-0">
                 <li class="nav-item">
@@ -76,6 +74,54 @@
                 </li>
               </span>
             </ul>
+          </div>
+        </div>
+      </nav> -->
+      <nav class="navbar navbar-expand-sm navbar-light p-0">
+        <div class="container-fluid p-0 expanded">
+          <a class="icon-home hide-text" href="home.html"
+            ><i class="logo" alt="logo"></i
+          ></a>
+          <div class="expanded-right">
+            <div class="right">
+              <div class="button-login-register">
+                <a href="/login.html"
+                  ><button class="btn btn-outline-warning">Login</button></a
+                >
+                <a href="/register.html"
+                  ><button class="btn btn-warning">Register</button></a
+                >
+              </div>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <span class="nav-menu p-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Vehicle Type</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">History</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                </span>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
