--- a/profile.html
+++ b/profile.html
@@ -31,29 +31,60 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="icon-home" href="home.html"
-          ><i class="logo" alt="logo"></i>Home</a
-        >
-        <ul>
-          <li>
-            <a href="profile.html"
-              ><img
-                src="./assets/samantha.jpg"
-                class="icon-profile prof"
-                alt=""
-            /></a>
-          </li>
-          <li><i class="icon-email email"></i></li>
-          <li class="optional"><a href="#about">About</a></li>
-          <li class="optional"><a href="#contact">History</a></li>
-          <li class="optional"><a href="#news">Vehicle Type</a></li>
-          <li><a class="" href="home.html">Home</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-sm navbar-light p-0">
+        <div class="container-fluid p-0 expanded">
+          <a class="icon-home hide-text" href="home.html"
+            ><i class="logo" alt="logo"></i
+          ></a>
+          <div class="expanded-right">
+            <div class="right">
+              <div class="button-email-profile">
+                <a class="hide-text" href="#"
+                  ><i class="icon-email email"></i>Email</a
+                >
+                <a href="profile.html"
+                  ><img
+                    src="./assets/samantha.jpg"
+                    class="icon-profile prof"
+                    alt=""
+                /></a>
+              </div>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <span class="nav-menu p-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Vehicle Type</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">History</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                </span>
+              </ul>
+            </div>
+          </div>
+        </div>
       </nav>
     </header>
     <section class="content">
-      <p class="page">Profile</p>
+      <h2>Profile</h2>
       <section class="profile text-center">
         <div class="profile-picture-container">
           <img src="./assets/samantha.jpg" class="profile-picture" alt="" />
@@ -86,7 +117,7 @@
           <label for="email">Email address:</label>
           <input
             type="email"
-            class="form-custom"
+            class="custom-form"
             id="email"
             value="zulaikha17@gmail.com"
           />
@@ -95,7 +126,7 @@
           <label for="address">Address:</label>
           <input
             type="text"
-            class="form-custom"
+            class="custom-form"
             id="address"
             value="Iskandar Street no. 67 Block A Near Bus Stop"
           />
@@ -104,7 +135,7 @@
           <label for="phone">Mobile number:</label>
           <input
             type="phone"
-            class="form-custom"
+            class="custom-form"
             id="phone"
             value="(+62) 813456782"
           />
@@ -117,14 +148,19 @@
             <label for="display-name">Display name:</label>
             <input
               type="text"
-              class="form-custom"
+              class="custom-form"
               id="display-name"
               value="zulaikha"
             />
           </div>
           <div class="col">
             <label for="date">DD/MM/YY:</label>
-            <input type="date" class="form-custom" id="date" value="2003-09-03" />
+            <input
+              type="date"
+              class="custom-form"
+              id="date"
+              value="2003-09-03"
+            />
           </div>
         </div>
       </section>
@@ -147,7 +183,7 @@
           </p>
           <p class="mt-5">©2020 Vehicle Rental Center. All rights reserved</p>
         </div>
-        <div class="destinations mb-5">
+        <div class="destinations">
           <p class="footer-title">Destinations</p>
           <p><a href="#">Bali</a></p>
           <p><a href="#">Yogyakarta</a></p>
@@ -155,7 +191,7 @@
           <p><a href="#">Kalimantan</a></p>
           <p><a href="#">Malang</a></p>
         </div>
-        <div class="vehicles mb-5">
+        <div class="vehicles">
           <p class="footer-title">Vehicle</p>
           <p><a href="#">Bike</a></p>
           <p><a href="#">Cars</a></p>
@@ -163,7 +199,7 @@
           <p><a href="#">Return Times</a></p>
           <p><a href="#">FAQs</a></p>
         </div>
-        <div class="interests mb-5">
+        <div class="interests">
           <p class="footer-title">Interests</p>
           <p><a href="#">Adventure Travel</a></p>
           <p><a href="#">Art And Culture</a></p>
@@ -172,7 +208,7 @@
           <p><a href="#">Culinary Trip</a></p>
         </div>
       </section>
-      <span><hr class="line" /></span>
+      <hr class="line" />
       <section class="social">
         <a href="#twitter.com/"
           ><i class="icon icon-twitter" alt="twitter"></i>twitter</a
@@ -191,5 +227,11 @@
         >
       </section>
     </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
