--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Register to vehicle rental to rent your wanted vehicle."
+      content="Login to vehicle rental to rent your wanted vehicle."
     />
 
     <!-- bootstrap -->
@@ -33,75 +33,111 @@
     <title>Register | Vehicle Rental</title>
   </head>
   <body>
-    <section class="grid">
-      <section class="left"></section>
-      <section class="right">
-        <section class="signup">
-          <header>
-            <h1>Register</h1>
-          </header>
-          <section class="form">
-            <input
-              type="name"
-              class="mb-3 form-custom width450"
-              placeholder="Name"
-              name="name"
-              id="name"
-            />
-            <input
-              type="email"
-              class="mb-3 form-custom width450"
-              placeholder="Email"
-              name="email"
-              id="email"
-            />
-            <input
-              type="password"
-              class="mb-3 form-custom width450"
-              placeholder="Password"
-              name="Password"
-              id="Password"
-            />
-            <button class="btn btn-warning mb-3 width450">Register</button>
-            <hr />
-            <button class="btn bg-light mt-3 mb-3 width450">
-              <i class="icon-google"></i>Register with Google
-            </button>
-            <a href="/login.html"><button class="btn bg-dark text-warning mb-5 width450">
-              Login
-            </button></a>
-          </section>
-        </section>
-        <footer>
-          <section class="grid-footer">
-            <i class="logo"></i>
-            <p class="mt-3">
-              Plan and book your perfect trip with<br />
-              expert advice, travel tips for vehicle<br />
-              information from us
-            </p>
-            <p class="mt-5">©2020 Vehicle Rental Center. All rights reserved</p>
-          </section>
-          <span><hr class="line" /></span>
-          <section class="social">
-            <a href="#twitter.com/"
-              ><i class="icon icon-twitter" alt="twitter"></i>twitter</a
-            >
-            <a href="#facebook.com/"
-              ><i class="icon icon-facebook" alt="facebook"></i>facebook</a
-            >
-            <a href="#instagram.com/"
-              ><i class="icon icon-instagram" alt="instagram"></i>instagram</a
-            >
-            <a href="#linkedin.com/"
-              ><i class="icon icon-linkedin" alt="linkedin"></i>linkedin</a
-            >
-            <a href="#youtube.com/"
-              ><i class="icon icon-youtube" alt="youtube"></i>youtube</a
-            >
-          </section>
-        </footer>
+    <section class="main">
+      <section class="left-section">
+        <header>
+          <h1>
+            <p>Let's Explore</p>
+            <p>The World</p>
+          </h1>
+        </header>
+        <p class="login1">Already have an account?</p>
+        <a style="text-decoration: none" href="/login.html"
+          ><button
+            style="max-width: 375px"
+            class="btn bg-dark text-warning fixed-width login1"
+          >
+            Login
+          </button></a
+        >
+      </section>
+      <section class="right-section">
+        <input
+          type="name"
+          class="custom-form fixed-width"
+          placeholder="Name"
+          name="name"
+          id="name"
+        />
+        <input
+          type="email"
+          class="custom-form fixed-width"
+          placeholder="Email"
+          name="email"
+          id="email"
+        />
+        <input
+          type="password"
+          class="custom-form fixed-width"
+          placeholder="Password"
+          name="Password"
+          id="Password"
+        />
+        <a href="/home.html"
+          ><button class="btn btn-warning fixed-width">Register</button></a
+        >
+        <button class="btn bg-light fixed-width icon-button">
+          <i class="icon-google"></i>Register with Google
+        </button>
+        <p class="login2 text-center">
+          Already have an account? <a href="login.html">Login</a> now
+        </p>
       </section>
     </section>
+    <footer>
+      <section class="grid-footer">
+        <div class="intro">
+          <i class="logo"></i>
+          <p class="mt-3">
+            Plan and book your perfect trip with<br />
+            expert advice, travel tips for vehicle<br />
+            information from us
+          </p>
+          <p class="mt-5">©2020 Vehicle Rental Center. All rights reserved</p>
+        </div>
+        <div class="destinations">
+          <p class="footer-title">Destinations</p>
+          <p><a href="#">Bali</a></p>
+          <p><a href="#">Yogyakarta</a></p>
+          <p><a href="#">Jakarta</a></p>
+          <p><a href="#">Kalimantan</a></p>
+          <p><a href="#">Malang</a></p>
+        </div>
+        <div class="vehicles">
+          <p class="footer-title">Vehicle</p>
+          <p><a href="#">Bike</a></p>
+          <p><a href="#">Cars</a></p>
+          <p><a href="#">Motorbike</a></p>
+          <p><a href="#">Return Times</a></p>
+          <p><a href="#">FAQs</a></p>
+        </div>
+        <div class="interests">
+          <p class="footer-title">Interests</p>
+          <p><a href="#">Adventure Travel</a></p>
+          <p><a href="#">Art And Culture</a></p>
+          <p><a href="#">Wildlife And Nature</a></p>
+          <p><a href="#">Family Holidays</a></p>
+          <p><a href="#">Culinary Trip</a></p>
+        </div>
+      </section>
+      <hr class="line" />
+      <section class="social">
+        <a href="#twitter.com/"
+          ><i class="icon icon-twitter" alt="twitter"></i>twitter</a
+        >
+        <a href="#facebook.com/"
+          ><i class="icon icon-facebook" alt="facebook"></i>facebook</a
+        >
+        <a href="#instagram.com/"
+          ><i class="icon icon-instagram" alt="instagram"></i>instagram</a
+        >
+        <a href="#linkedin.com/"
+          ><i class="icon icon-linkedin" alt="linkedin"></i>linkedin</a
+        >
+        <a href="#youtube.com/"
+          ><i class="icon icon-youtube" alt="youtube"></i>youtube</a
+        >
+      </section>
+    </footer>
   </body>
 </html>
