--- a/detail.html
+++ b/detail.html
@@ -193,7 +193,7 @@
           Chat Admin
         </button>
         <button class="btn btn-warning button action-button">
-          Reservation
+          Book
         </button>
         <button
           class="btn btn-dark text-warning button action-button icon-button"
