--- a/home.html
+++ b/home.html
@@ -31,57 +31,11 @@
   </head>
   <body>
     <header>
-      <!-- <nav class="navbar navbar-expand-sm navbar-light p-0">
-        <div class="container-fluid p-0">
-          <a class="icon-home" href="home.html"
-            ><i class="logo" alt="logo"></i
-          ></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <ul class="button-login-register">
-                <a href="/login.html"
-                  ><button class="btn btn-outline-warning">Login</button></a
-                >
-                <a href="/register.html"
-                  ><button class="btn btn-warning">Register</button></a
-                >
-              </ul>
-              <span class="nav-menu p-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Vehicle Type</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">History</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-              </span>
-            </ul>
-          </div>
-        </div>
-      </nav> -->
       <nav class="navbar navbar-expand-sm navbar-light p-0">
         <div class="container-fluid p-0 expanded">
           <a class="icon-home hide-text" href="home.html"
-            ><i class="logo" alt="logo"></i
-          ></a>
+            ><i class="logo" alt="logo"></i>Home</a
+          >
           <div class="expanded-right">
             <div class="right">
               <div class="button-login-register">
@@ -106,20 +60,20 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
-                <span class="nav-menu p-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Vehicle Type</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">History</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                </span>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Vehicle Type</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">History</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
               </ul>
             </div>
           </div>
