--- a/detail.html
+++ b/detail.html
@@ -34,20 +34,20 @@
       <nav class="navbar navbar-expand-sm navbar-light p-0">
         <div class="container-fluid p-0 expanded">
           <a class="icon-home hide-text" href="home.html"
-            ><i class="logo" alt="logo"></i
-          ></a>
+            ><i class="logo" alt="logo"></i>Home</a
+          >
           <div class="expanded-right">
             <div class="right">
               <div class="button-email-profile">
                 <a class="hide-text" href="#"
                   ><i class="icon-email email"></i>Email</a
                 >
-                <a href="profile.html"
+                <a class="hide-text" href="profile.html"
                   ><img
                     src="./assets/samantha.jpg"
                     class="icon-profile prof"
-                    alt=""
-                /></a>
+                    alt="profile"
+                />Profile</a>
               </div>
               <button
                 class="navbar-toggler"
@@ -63,20 +63,18 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
-                <span class="nav-menu p-0">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Vehicle Type</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">History</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                </span>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Vehicle Type</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">History</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -152,6 +150,7 @@
                 <img
                   class="d-block w-100"
                   src="./assets/fixie.jpg"
+                  alt="first thumbnail"
                   class="img-fluid"
                 />
               </li>
@@ -159,6 +158,7 @@
                 <img
                   class="d-block w-100"
                   src="./assets/fixie.jpg"
+                  alt="second thumbnail"
                   class="img-fluid"
                 />
               </li>
@@ -166,6 +166,7 @@
                 <img
                   class="d-block w-100"
                   src="./assets/fixie.jpg"
+                  alt="third thumbnail"
                   class="img-fluid"
                 />
               </li>
@@ -192,9 +193,7 @@
         <button class="btn btn-dark text-warning button action-button">
           Chat Admin
         </button>
-        <button class="btn btn-warning button action-button">
-          Book
-        </button>
+        <button class="btn btn-warning button action-button">Book</button>
         <button
           class="btn btn-dark text-warning button action-button icon-button"
         >
