--- a/profile.html
+++ b/profile.html
@@ -34,20 +34,20 @@
       <nav class="navbar navbar-expand-sm navbar-light p-0">
         <div class="container-fluid p-0 expanded">
           <a class="icon-home hide-text" href="home.html"
-            ><i class="logo" alt="logo"></i
-          ></a>
+            ><i class="logo" alt="logo"></i>Home</a
+          >
           <div class="expanded-right">
             <div class="right">
               <div class="button-email-profile">
                 <a class="hide-text" href="#"
                   ><i class="icon-email email"></i>Email</a
                 >
-                <a href="profile.html"
+                <a class="hide-text" href="profile.html"
                   ><img
                     src="./assets/samantha.jpg"
                     class="icon-profile prof"
-                    alt=""
-                /></a>
+                    alt="profile"
+                />Profile</a>
               </div>
               <button
                 class="navbar-toggler"
@@ -63,20 +63,20 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
-                <span class="nav-menu p-0">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="home.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Vehicle Type</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">History</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                </span>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="home.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Vehicle Type</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">History</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
               </ul>
             </div>
           </div>
