update header and footer

--- a/register.html
+++ b/register.html
@@ -89,9 +89,9 @@
         <div class="intro">
           <i class="logo"></i>
           <p class="mt-3">
-            Plan and book your perfect trip with<br />
-            expert advice, travel tips for vehicle<br />
-            information from us
+            Plan and book your perfect trip with <br class="break" />
+            expert advice, travel tips for vehicle <br class="break" />
+            information from us.
           </p>
           <p class="mt-5">©2020 Vehicle Rental Center. All rights reserved</p>
         </div>
