--- a/detail.html
+++ b/detail.html
@@ -36,8 +36,34 @@
           <a class="icon-home hide-text" href="home.html"
             ><i class="logo" alt="logo"></i>Home</a
           >
-          <div class="expanded-right">
-            <div class="right">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="home.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Vehicle Type</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">History</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <hr class="line-nav" />
               <div class="button-email-profile">
                 <a class="hide-text" href="#"
                   ><i class="icon-email email"></i>Email</a
@@ -47,36 +73,10 @@
                     src="./assets/samantha.jpg"
                     class="icon-profile prof"
                     alt="profile"
-                />Profile</a>
+                  />Profile</a
+                >
               </div>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Vehicle Type</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">History</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-              </ul>
-            </div>
+            </ul>
           </div>
         </div>
       </nav>
@@ -206,9 +206,9 @@
         <div class="intro">
           <i class="logo"></i>
           <p class="mt-3">
-            Plan and book your perfect trip with<br />
-            expert advice, travel tips for vehicle<br />
-            information from us
+            Plan and book your perfect trip with <br class="break" />
+            expert advice, travel tips for vehicle <br class="break" />
+            information from us.
           </p>
           <p class="mt-5">©2020 Vehicle Rental Center. All rights reserved</p>
         </div>
