--- a/home.html
+++ b/home.html
@@ -36,8 +36,37 @@
           <a class="icon-home hide-text" href="home.html"
             ><i class="logo" alt="logo"></i>Home</a
           >
-          <div class="expanded-right">
-            <div class="right">
+          <!-- <div class="expanded-right"> -->
+          <!-- <div class="right"> -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- </div> -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="home.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Vehicle Type</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">History</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <hr class="line-nav" />
               <div class="button-login-register">
                 <a href="/login.html"
                   ><button class="btn btn-outline-warning">Login</button></a
@@ -46,37 +75,9 @@
                   ><button class="btn btn-warning">Register</button></a
                 >
               </div>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Vehicle Type</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">History</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-              </ul>
-            </div>
+            </ul>
           </div>
+          <!-- </div> -->
         </div>
       </nav>
     </header>
@@ -114,7 +115,7 @@
       </section>
     </section>
     <section class="content">
-      <section class="popular-title">
+      <section class="section-title">
         <h2>Popular in town</h2>
         <a href="#">View all ></a>
       </section>
@@ -144,7 +145,7 @@
           </div>
         </div>
       </section>
-      <h2>Testimonials</h2>
+      <h2 class="section-title">Testimonials</h2>
       <section class="testimony-container">
         <div
           id="carouselExampleFade"
@@ -230,9 +231,9 @@
         <div class="intro">
           <i class="logo"></i>
           <p class="mt-3">
-            Plan and book your perfect trip with<br />
-            expert advice, travel tips for vehicle<br />
-            information from us
+            Plan and book your perfect trip with <br class="break" />
+            expert advice, travel tips for vehicle <br class="break" />
+            information from us.
           </p>
           <p class="mt-5">©2020 Vehicle Rental Center. All rights reserved</p>
         </div>
